SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/CPQ_Playbook_Proposal_Section__c.object-meta.xml
<CustomObject>
    <description>Section Blueprint for Proposal PDF on a given CPQ Playbook</description>
    <label>CPQ Playbook Proposal Section</label>
    <nameField>
        <label>CPQ Playbook Proposal Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Proposal Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>