SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Allow_Mid_Section_Page_Break__c.field-meta.xml
<CustomField>
    <fullName>Allow_Mid_Section_Page_Break__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, the section may appear split between the bottom of one page and the top of the next. If false, all attempts to keep the section on the same page are made</description>
    <inlineHelpText>If true, the section may appear split between the bottom of one page and the top of the next. If false, all attempts to keep the section on the same page are made</inlineHelpText>
    <label>Allow Mid-Section Page Break</label>
    <type>Checkbox</type>
</CustomField>