SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Answer_Table_Questions__c.field-meta.xml
<CustomField>
    <fullName>Answer_Table_Questions__c</fullName>
    <description>Semicolon delineated list of Question Variable Names to display in answer table section</description>
    <inlineHelpText>Semicolon delineated list of Question Variable Names to display in answer table section</inlineHelpText>
    <label>Answer Table Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>