SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Body_Text_Block_1__c.field-meta.xml
<CustomField>
    <fullName>Body_Text_Block_1__c</fullName>
    <description>Body text for block 1</description>
    <inlineHelpText>Text for the first column of text of the section</inlineHelpText>
    <label>Body (Column 1)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>