SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Body_Text_Block_2__c.field-meta.xml
<CustomField>
    <fullName>Body_Text_Block_2__c</fullName>
    <description>Text for the second column of text of the section</description>
    <label>Body (Column 2)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>