SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/CPQ_Playbook__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook__c</fullName>
    <description>Playbook in which this section is pulled in for the Proposal PDF</description>
    <inlineHelpText>Playbook in which this section is pulled in for the Proposal PDF</inlineHelpText>
    <label>CPQ Playbook</label>
    <referenceTo>CPQ_Playbook__c</referenceTo>
    <relationshipLabel>CPQ Playbook Proposal Sections</relationshipLabel>
    <relationshipName>CPQ_Playbook_Proposal_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>