SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Entitlement_Table_Fields__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Table_Fields__c</fullName>
    <description>Semicolon delineated list of Contract_Entitlement__c Field API names to display in product table section</description>
    <inlineHelpText>Semicolon delineated list of Contract_Entitlement__c Field API names to display in product table section</inlineHelpText>
    <label>Entitlement Table Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>