SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Force_Page_Break_After__c.field-meta.xml
<CustomField>
    <fullName>Force_Page_Break_After__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the next section after should be placed at the top of a new page</description>
    <inlineHelpText>Determines if the next section after should be placed at the top of a new page</inlineHelpText>
    <label>Force Page Break After</label>
    <type>Checkbox</type>
</CustomField>