SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Inputs_Column_3__c.field-meta.xml
<CustomField>
    <fullName>Inputs_Column_3__c</fullName>
    <description>Semi-colon delineated list of Input labels for the third column in the User Input section</description>
    <inlineHelpText>Semi-colon delineated list of Input labels for the third column in the User Input section</inlineHelpText>
    <label>Inputs (Column 3)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>