SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Inputs_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>Inputs_Font_Color__c</fullName>
    <description>CSS Font Color for Inputs</description>
    <inlineHelpText>CSS Font Color for Inputs</inlineHelpText>
    <label>Inputs Font Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>