SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Inputs_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Inputs_Font_Size__c</fullName>
    <description>CSS Font Size in px for Inputs</description>
    <inlineHelpText>CSS Font Size in px for Inputs (Input the number with &apos;px&apos; appended)</inlineHelpText>
    <label>Inputs Font Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>