SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Product_Table_QLI_Fields__c.field-meta.xml
<CustomField>
    <fullName>Product_Table_QLI_Fields__c</fullName>
    <description>Semicolon delineated list of QLI Field API names to display in product table section</description>
    <inlineHelpText>Semicolon delineated list of QLI Field API names to display in product table section</inlineHelpText>
    <label>Product Table (QLI) Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>