SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Record_Table_Order_By_Clause__c.field-meta.xml
<CustomField>
    <fullName>Record_Table_Order_By_Clause__c</fullName>
    <description>SOQL query 'ORDER BY' clause to sort records shown in the table. DO NOT include the 'ORDER BY' keyword.</description>
    <inlineHelpText>SOQL query 'ORDER BY' clause to sort records shown in the table. DO NOT include the 'ORDER BY' keyword.</inlineHelpText>
    <label>Record Table Order By Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>