SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Record_Table_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Record_Table_Where_Clause__c</fullName>
    <description>SOQL query 'WHERE' clause to filter records to be shown in the table. DO NOT include the 'WHERE' keyword.</description>
    <inlineHelpText>SOQL query 'WHERE' clause to filter records to be shown in the table. DO NOT include the 'WHERE' keyword.</inlineHelpText>
    <label>Record Table Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>