SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Section_Type__c.field-meta.xml
<CustomField>
    <fullName>Section_Type__c</fullName>
    <description>Determines content type to display in section</description>
    <inlineHelpText>Determines content type to display in section</inlineHelpText>
    <label>Section Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text - 1 column</fullName>
            </value>
            <value>
                <fullName>Text - 2 columns</fullName>
            </value>
            <value>
                <fullName>Text - 3 columns</fullName>
            </value>
            <value>
                <fullName>Image - 1 column</fullName>
            </value>
            <value>
                <fullName>Image and Text - 2 columns (1:1)</fullName>
            </value>
            <value>
                <fullName>Image and Text - 2 columns (1:2)</fullName>
            </value>
            <value>
                <fullName>Image and Text - 2 columns (1:3)</fullName>
            </value>
            <value>
                <fullName>Product Table</fullName>
            </value>
            <value>
                <fullName>Entitlement Table</fullName>
            </value>
            <value>
                <fullName>Answer Table - 1 column</fullName>
            </value>
            <value>
                <fullName>Answer Table - 2 columns</fullName>
            </value>
            <value>
                <fullName>User Input - 1 column</fullName>
            </value>
            <value>
                <fullName>User Input - 2 columns</fullName>
            </value>
            <value>
                <fullName>User Input - 3 columns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>