SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Table_Entries_Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Table_Entries_Font_Size__c</fullName>
    <description>CSS Font Size in px for Table Entries</description>
    <inlineHelpText>CSS Font Size in px for Table Entries (Input the number with &apos;px&apos; appended)</inlineHelpText>
    <label>Table Entries Font Size (px)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>