SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Proposal_Section__c/fields/Table_Headers_Font_Color__c.field-meta.xml
<CustomField>
    <fullName>Table_Headers_Font_Color__c</fullName>
    <description>CSS Font Color for Table Headers</description>
    <inlineHelpText>CSS Font Color for Table Headers</inlineHelpText>
    <label>Table Headers Font Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>